fix spacing in site

--- a/src/styles/smallscreen.css
+++ b/src/styles/smallscreen.css
@@ -32,6 +32,11 @@
     transform-origin: center center;
   }
 
+  .project__details {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+
   /* - - - - - - - - - - - - - - - - - - - - */
   /* SPLIT NOW PAGE */
 }
